...
    private var ActionButtons: some View {
        VStack {
            HStack(spacing: 30) {
                NavigationLink {
                    LoginRegisterView(isSignup: true)
                } label: {
                    Text("Register")
                }
                .buttonStyle(NeumorphicButton(shape: RoundedRectangle(cornerRadius: 15), width: 90))
                .accessibilityIdentifier("Register")
                NavigationLink {
                    LoginRegisterView(isSignup: false)
                } label: {
...
            .padding(.vertical)
            
            Button("Maybe later") {
                accountManager.currentAccount = accountManager.offlineAccount
            }
            .buttonStyle(NeumorphicButton(shape: RoundedRectangle(cornerRadius: 15), width: 90, color: theme.selected.secondary))
            .accessibilityIdentifier("DismissLogin")
        }
    }
}

#Preview {
    LandingView()
...
