...
                        vm.addToUserLibrary(show: added.1!)
                        addedSuccesfuly.toggle()
                    }
                }
                .buttonStyle(NeumorphicButton(shape: RoundedRectangle(cornerRadius: 15)))
                .padding()
                .accessibilityIdentifier("AddToLibraryButton")
            }
            .onChange(of: vm.finished) {
                addedSuccesfuly = true
                vm.saveShow(modelContainer: modelContext.container)
            }
            .navigationTitle(show.name)
...
