...
    }
}

extension Show {
    static var exaple: Show {
        let seasons = [1:Season(id: 1, episodes: [Episode(id: 1, name: "alma", aired: "2020", runtime: 21, episodeNumber: 1, seasonNumber: 1)])]
        let show = Show(id: 0, name: "Adventure Time", image: "https://m.media-amazon.com/images/M/MV5BMGFkNGY4NGMtZjY0NC00YTI0LThiZjMtMjBmZGMzOGU3YTdmXkEyXkFqcGdeQXVyMTM0NTUzNDIy._V1_.jpg", firstAired: "2010", lastAired: "2018", nextAired: "", score: 10, status: "ended", originalLanguage: "engm", runningTimeInMinutes: 11, desc: "asd", year: "2010", seasons: seasons, episodes: 500, link: URL(strin
        return show
    }
}

extension Show {
    convenience init(id: Int) {
...
